--- a/CSS/css.css
+++ b/CSS/css.css
@@ -1,14 +1,20 @@
 body{
-   
-    background-image: url("../images/bg.png");
     background-color: rgb(223, 200, 172);
-    background-repeat: no-repeat;
-    background-size: 100vw; 
     margin: 0;
     padding: 0%;
     z-index: 0;
     overflow-x:hidden;
-    
+    cursor: default;
+}
+
+#background{
+
+    background-image: url("https://i.ibb.co/6ZrDxpj/bg.png");
+     background-repeat: no-repeat;
+   background-position: center;
+   background-size:100%;
+   height: 100vh;
+   z-index: -1;
 }
 
 #crosspoint{
@@ -116,7 +122,7 @@ background-color:rosybrown;
     
 .aboutMe{
 position: absolute;
-top: 130vh;
+top: 110vh;
 
 height: 100vh;
 width: 99vw;
@@ -168,15 +174,16 @@ text-align: center;
     border: none;
     color: black;
  background-color: blanchedalmond;
-
+border-radius: 1px;
    
     text-align: center;
   
     display: inline-block;
     font-size: 1vw;
-    
-    
-    
+}
+
+#moreButton:hover{
+    cursor: pointer;
 }
 
 .Social{
