--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,6 +1,7 @@
 body{
-    background-image:url("../images/dark_cubes.jpg"); 
+    background-image:url("https://i.ibb.co/D8gcNnh/skyscrapper.jpg"); 
     background-size: 100vw; 
+    background-position: center;
     background-repeat: no-repeat;
     background-color: black;
     margin: 0;
@@ -38,20 +39,32 @@ nav{
     z-index: 1;
     position: fixed;
     bottom: 0;
-    list-style-type: none;
+  
     height: 7vh;
     width: 100vw;
     background-color: #acacac6c; 
     text-align: center;
+
+    transition: all 1scvhjfcuyjk;
+    
 }
 
-nav li{
+#nav{
+    
     display: inline;
     color: rgb(226, 194, 161);
     padding: 2vh;
     
     text-size-adjust: 1vh;
 }
-a{
+
+a {
     color: black;
-}
+    text-decoration: none;
+    cursor:pointer;
+    }
+
+    .link{
+        border-radius: 1em;
+        border-color: bisque;
+    }
