--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("https://i.ibb.co/D8gcNnh/skyscrapper.jpg"); 
+    background-image:url("https://i.ibb.co/ZVh7fDg/pawel-czerwinski-kr-A9znd-Plr-A-unsplash.jpg"); 
     background-size: 100vw; 
     background-position: center;
     background-repeat: no-repeat;
