--- a/CSS/css.css
+++ b/CSS/css.css
@@ -1,10 +1,11 @@
 body{
-    background-color: rgb(223, 200, 172);
+    background-color: rgb(255, 255, 255);
     margin: 0;
     padding: 0%;
     z-index: 0;
     overflow-x:hidden;
     cursor: default;
+   
    
 }
 html{
@@ -15,19 +16,13 @@ html{
 
     background-image: url("https://i.ibb.co/6ZrDxpj/bg.png");
      background-repeat: no-repeat;
-   background-position: center;
+   background-position:center;
    background-size:100%;
-   height: 100vh;
+   height: 70vh;
    z-index: -1;
 }
 
-#crosspoint{
-   
-width: 100vw;
-height: 10vh;
-position: absolute;
-top: 100vh;
-}
+
 
 .middle{
      transform: translate(-50%, -50%);  
@@ -36,8 +31,9 @@ top: 100vh;
 
 .header{
     position: absolute;
-    top: 30vh;
+    top: 20vh;
     left: 50vw;
+    text-align: center;
    
     
 }
@@ -45,6 +41,9 @@ top: 100vh;
 .header h1{
 
     font-style: normal;
+    font-size: 50px;
+   
+    margin-bottom: 0px;
 }
 .header h2{
     font-style: oblique;
@@ -53,6 +52,7 @@ top: 100vh;
 .nav{
      top: 0vh; 
       list-style-type: none;
+      font-family: 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .nav li{
   padding: 1vh 2vh;
@@ -63,9 +63,13 @@ top: 100vh;
   
     position: absolute;
     left: 0vw;
-    height: 100vh;
-    width: 10vw;
+    height: 70vh;
+    width: 100vw;
     background-color: blanchedalmond; 
+    z-index: 2;
+    border-width: 2px;
+    border-color: black;
+    transition: all 1s linear;
     
 }
 #Navigation li{
@@ -83,13 +87,20 @@ top: 100vh;
     position: fixed;    
      height: 60px;
      width: 100vw;
-     background-color: #4a3934; 
      visibility: hidden;
+     border-style: solid;
+     background-color: white;
+    color: black;
+     border-right: none;
+     border-top: none;
+     border-left: none;
+     border-bottom-color:rgb(175, 110, 67);
+     z-index: 2;
    
 }
 #Navigation2 li{
     display: inline;
-    color: rgb(226, 194, 161);
+  
     text-size-adjust: 1vh;
    
  
@@ -99,31 +110,33 @@ top: 100vh;
    
 }
 #Navigation2 li:hover{
-    background-color:rgb(175, 110, 67);
+    color:rgb(175, 110, 67);
 }
 /*nav top */
 
 /*changing nav */
 .aboutMe{
-position: absolute;
-top: 110vh;
-height: 100vh;
-width: 80vw;
 
-margin: 0vw 10vw;
+position: absolute;
+height: fit-content;
+width: 65vw;
+
+margin: 0vw 15vw;
 
 
 }
 
 
     .title{
-      font-size: 30px;
-      color: bisque;
-    background-color:rgb(175, 110, 67,0.7);
+      font-size: 40px;
+      font-family:Avenir , Georgia, 'Times New Roman', Times, serif;
+      color: rgb(0, 0, 0);
+   
      border-style: hidden;
-     border-radius: 1em;
-     text-align: center;
+     
+     text-align: left;
    padding: 7px 25px;
+   margin-bottom: 50px;
     }
 #title_skill{
     width: fit-content;  
@@ -135,26 +148,27 @@ margin: 0vw 10vw;
 }
 .summary{
     position: absolute;
-    top: 50vh;
+    top: 40vh;
     left: 50vw;
     border-radius: 10px;
     padding: 0.25em;
-    width: 70vw;
+    width: 60vw;
     text-align: center;
     background-color: rgba(255, 228, 196, 0.363);
 
 }
 #sumEX{
     position: absolute;
-    top: 60vh;
+    top: 50vh;
     background-color:rgba(255, 228, 196, 0.0);
+    z-index: 1;
 }
 #sumExtra{
     display:none; 
 }
 
 .text{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #moreButton{
@@ -173,12 +187,15 @@ border-radius: 4px;
     cursor: pointer;
 }
 
-.Social{ 
-    top: 200vh;
-    height: 45vh;
 
+
+    #line{
+      color: white;
+      border: none;
+      background-color: black;
+      height: 0.5px;
+      width: 80%;
     }
-
 a{
     text-decoration: none;
     color: inherit;
@@ -206,14 +223,14 @@ a{
 
   .inp{
   
-    background-color: rgba(0, 0, 0, 0.192);
+    
   border-width: 3px;
     border-style: solid;
     
     border-right: none;
     border-top: none;
     border-left: none;
-    border-bottom-color:antiquewhite;
+    border-bottom-color:rgba(0, 0, 0, 0.7);
 
     text-indent: 20px;
     padding: 2px;
@@ -222,14 +239,17 @@ a{
     width: 300px;
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
+    color: rgb(0, 0, 0);
     
 }
 
 ::placeholder{
-    color: white;
+    color: rgb(0, 0, 0);
 }
-
+ul{
+  position: sticky;
+  top: 0;
+}
 input:focus {
    outline-style: none;
   }
@@ -282,6 +302,7 @@ padding: 10px;
     top: -25px;
     background-color: #444444;
     min-width: 160px;
+    height: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
@@ -317,6 +338,10 @@ padding: 10px;
   }
 
   .dropdown:hover .dropdown-content2 {display: block;}
+
+  b{
+    color: rgba(24,131,187,255);
+  }
   
 
 /*  */
@@ -358,6 +383,9 @@ background-size:200%;
   visibility: visible;
 }
 
+.summary{
+  background-color: rgba(255, 228, 196, 0.158);
+}
 
 #Navigation2 ul{
   padding-left: 0px;
@@ -391,22 +419,39 @@ top: 94vh;
 
 }
 
-@media (max-height: 900px) and (max-width: 900px) {
+@media (max-height: 900px) and (max-width: 400px) {
   .summary{
     margin: 0px;
-    top: 93vh;
-    
-  }
-  
-  #sumEX{
-  top: 113vh;
+    top: 650px;
+
   }
 
-  .Social{
-    top: 220vh;
+  #sumEX{
+  top: 800px;
   }
 
   .aboutMe{
-    top: 133vh;
+    top: 110vh;
   }
 }
+@media (max-height: 670px) and (max-width: 380px) {
+  .summary{
+    margin: 0px;
+    top: 650px;
+
+  }
+
+  #sumEX{
+  top: 800px;
+  }
+
+  .aboutMe{
+    top: 135vh;
+  }
+
+ 
+}
+
+
+
+
