--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,8 +1,9 @@
 body{
   
-    background-color: rgb(231, 231, 231);
+    background-color: white;
     margin: 0;
     color: black;
+    height: 155vh;
 }
 .website{
     z-index: 1;
@@ -28,34 +29,40 @@ text-align: center;
     font-size: 30px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    align-items: center;
     
   }
 
 
 nav{
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     bottom: 0;
-  
     height: 7vh;
     width: 100vw;
-    background-color: #acacac6c; 
+    background-color: white;
+    border: solid;
+    border-width: 2px;
+    border-color: black;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
     text-align: center;
-
     transition: all 1;
     
 }
 
-#nav{
-    
-    display: inline;
-  
-    padding: 2vh;
-    
-    text-size-adjust: 1vh;
-}
 
+nav li,a,p{
+   
+  display: inline;
+}
+nav a{
+    float: left;
+}
+nav a:hover{
+    color:rgb(175, 110, 67);
+}
 a {
     color: black;
     text-decoration: none;
@@ -69,3 +76,32 @@ a {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         padding: 10px;
 }
+
+.sp2{
+grid-row: 0/2;
+height: 400px;
+}
+
+@media(max-width:1000px){
+    .grid-container{
+        grid-template-columns: auto;
+    }
+    .website{
+        width: 50vw;
+    }
+    .sp2{
+        width: 90vw;
+        grid-row:10/12;
+      }
+}
+@media(max-width:700px){
+  .website{
+        width: 90vw;
+    }
+    
+
+      body{
+        overflow-y: visible;
+      }
+}
+    
