--- a/CSS/css.css
+++ b/CSS/css.css
@@ -5,6 +5,8 @@ body{
     z-index: 0;
     overflow-x:hidden;
     cursor: default;
+ 
+    
    
    
 }
@@ -55,7 +57,7 @@ html{
       font-family: 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .nav li{
-  padding: 1vh 2vh;
+  padding: 1vh;
 }
 /*changing nav */
     /*nav left */
@@ -64,14 +66,19 @@ html{
     position: absolute;
     left: 0vw;
     height: 70vh;
-    width: 100vw;
+    width: 10vw;
     background-color: blanchedalmond; 
     z-index: 2;
-    border-width: 2px;
-    border-color: black;
+    animation-name:slide;
     transition: all 1s linear;
-    
+    animation-duration:3s;
+   
 }
+@keyframes slide {
+  0% {width:100vw; }
+ 
+  100%{width:10vw;}
+  }
 #Navigation li{
     display: block;
   color: rgb(61, 51, 41);
@@ -271,11 +278,7 @@ padding: 10px;
     cursor: pointer;
   }
 
-  footer{
-    position: absolute;
-   top: 225vh;
-    
-  }
+  
 .center{
     margin-left: auto;
     margin-right: auto;
@@ -341,6 +344,15 @@ padding: 10px;
 
   b{
     color: rgba(24,131,187,255);
+  }
+
+  footer{
+   margin-top: 100px;
+text-align: center;
+   
+    
+
+    
   }
   
 
@@ -434,7 +446,7 @@ top: 94vh;
     top: 110vh;
   }
 }
-@media (max-height: 670px) and (max-width: 380px) {
+@media (max-height: 700px) and (max-width: 400px) {
   .summary{
     margin: 0px;
     top: 650px;
@@ -448,6 +460,7 @@ top: 94vh;
   .aboutMe{
     top: 135vh;
   }
+
 
  
 }
